# piezobot-mri-compatible-biopsy-robot

./: .gitignore  .gitmodules  README.md  REAMDE_STARTING.md  SETUP.md  build.sh  frames_2023-11-22_17.31.12.gv  frames_2023-11-22_17.46.56.gv  piezobotarm_worldlink6_5000_1.000000_1.000000.ikcache  t2_haste_tra_199.nii  test.csv
src/piezobot/piezobot/: CMakeLists.txt  README.txt  package.xml
src/piezobot_hardware_interface/: CMakeLists.txt  README.md  package.xml  piezobot_hardware_interface.xml
src/piezobot_hardware_interface/include/piezobot_hardware_interface/: calibrate.txt  piezobot_commander_rs.hpp  piezobot_hardware_interface.hpp  visibility_control.h
src/piezobot_hardware_interface/src/: encoder.odt  piezobot_hardware_interface.cpp
src/piezobot_hardware_interface/test/: test_piezobot_hardware_interface.cpp
src/piezobot_pose_correction/: CMakeLists.txt  README.md  package.xml
src/piezobot_pose_correction/src/: pose_correction.cpp  pose_correction_2.cpp  pose_correction_old.cpp  target_fine.cpp  target_publisher.cpp
src/piezobot_servo/: CMakeLists.txt  README.md  package.xml
src/piezobot_servo/config/: piezobot_simulated_config.yaml
src/piezobot_servo/launch/: piezobot_servo.launch.py  piezobot_servo_inteface.launch.py  pose_tracking.launch.py
src/piezobot_servo/src/: pose_tracking_demo.cpp  servo_cpp_interface_deo.cpp  servo_keyboard_input.cpp
src/piezobot_tracking/: README.md  inference.sh  package.xml  setup.cfg  setup.py
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/: inference_information.json  inference_instructions.txt
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__2d/: dataset_fingerprint.json  plans.json
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__2d/fold_1/: debug.json  training_log_2023_11_16_19_09_29.txt
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__2d/fold_2/: debug.json  training_log_2023_11_16_19_09_29.txt
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__2d/fold_3/: debug.json  training_log_2023_11_16_19_09_29.txt
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/: dataset.json  dataset_fingerprint.json
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/crossval_results_folds_0_1_2_3_4/: plans.json  postprocessing.json  postprocessing.pkl  summary.json
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/crossval_results_folds_0_1_2_3_4/postprocessed/: summary.json
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/fold_0/: debug.json  training_log_2023_10_26_15_22_38.txt  training_log_2023_10_27_08_47_47.txt
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/fold_0/validation/: summary.json  t2_haste_tra_2_2mm_006.npz  t2_haste_tra_2_2mm_006.pkl  t2_haste_tra_2_2mm_010.npz  t2_haste_tra_2_2mm_010.pkl  t2_haste_tra_2_2mm_014.npz  t2_haste_tra_2_2mm_014.pkl  t2_haste_tra_2_2mm_017.npz  t2_haste_tra_2_2mm_017.pkl  t2_haste_tra_2_2mm_106.npz  t2_haste_tra_2_2mm_106.pkl  t2_haste_tra_2_2mm_110.npz  t2_haste_tra_2_2mm_110.pkl  t2_haste_tra_2_2mm_114.npz  t2_haste_tra_2_2mm_114.pkl  t2_haste_tra_2_2mm_117.npz  t2_haste_tra_2_2mm_117.pkl  t2_haste_tra_2_2mm_206.npz  t2_haste_tra_2_2mm_206.pkl  t2_haste_tra_2_2mm_210.npz  t2_haste_tra_2_2mm_210.pkl
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/fold_1/: debug.json  training_log_2023_10_26_15_22_38.txt  training_log_2023_10_27_08_47_47.txt  training_log_2023_10_27_09_02_03.txt
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/fold_1/validation/: summary.json  t2_haste_tra_2_2mm_003.npz  t2_haste_tra_2_2mm_003.pkl  t2_haste_tra_2_2mm_007.npz  t2_haste_tra_2_2mm_007.pkl  t2_haste_tra_2_2mm_011.npz  t2_haste_tra_2_2mm_011.pkl  t2_haste_tra_2_2mm_013.npz  t2_haste_tra_2_2mm_013.pkl  t2_haste_tra_2_2mm_103.npz  t2_haste_tra_2_2mm_103.pkl  t2_haste_tra_2_2mm_107.npz  t2_haste_tra_2_2mm_107.pkl  t2_haste_tra_2_2mm_111.npz  t2_haste_tra_2_2mm_111.pkl  t2_haste_tra_2_2mm_113.npz  t2_haste_tra_2_2mm_113.pkl  t2_haste_tra_2_2mm_207.npz  t2_haste_tra_2_2mm_207.pkl
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/fold_2/: debug.json  training_log_2023_10_26_15_22_38.txt  training_log_2023_10_27_08_47_47.txt  training_log_2023_10_27_09_07_24.txt
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/fold_2/validation/: summary.json  t2_haste_tra_2_2mm_001.npz  t2_haste_tra_2_2mm_001.pkl  (+14 more)
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/fold_3/: debug.json  training_log_2023_10_26_15_22_39.txt  training_log_2023_10_27_08_47_47.txt
src/piezobot_tracking/nnUNet_reults/Dataset001_NeedlePhantomV1/nnUNetTrainer__nnUNetPlans__3d_fullres/fold_4/: debug.json  training_log_2023_10_27_09_35_28.txt
src/piezobot_tracking/nnUnet_input/: 60_15_015_0000.nrrd  labels.lsetp
src/piezobot_tracking/nnUnet_output/: predict_from_raw_data_args.json
src/piezobot_tracking/nnUnet_output/metadata_v2/: predict_from_raw_data_args.json
src/piezobot_tracking/nnUnet_output/output/: 45_0_003-labels.nii  predict_from_raw_data_args.json
src/piezobot_tracking/nnUnet_output/output_v1/: dataset.json
src/piezobot_tracking/piezobot_tracking/: analyze_segmentation.py  analyze_segmentation_v3.py  calculate_correction_pose.py  callback.py  extract_pose.py  get_ik_solution.py  get_pose.py  installnnUNetreadme.md  mat2_euler.py  nnUnet.py  piezobot_joint_space_correction.py  piezobot_pose_correction.py  pose_from_segmentation.py  quaternion_calculations.py  usb_reader.py
src/piezobot_tracking/validation/: 90_0_001.nii
(+121 files in other folders)
