<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>piezobot_tracking</name>
  <version>0.0.0</version>
  <description>Contains the code to track the needle holder</description>
  <maintainer email="Nils.Iseke@medma.uni-heidelberg.de">Nils.Iseke@medma.uni-heidelberg.de</maintainer>
  <license>Apache-2.0</license>
  <depend>python3-pandas</depend>
  <depend>python-transforms3d-pip</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
